# flight-scout-agents

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  constraints_lawyer.py  deduper_normalizer.py  factory.py  final_presenter.py  handoffs.py  orchestrator.py  planner_judge.py  schema_guard.py  scout_aggregator_2.py  stopover_itinerary.py  strategic_ranker.py  verifier.py
backend/app/api/: routes_runs.py  routes_search.py
backend/app/core/: artifact_store.py  booking_links.py  browser_pool.py  cache.py  compare.py  config.py  hashing.py  logging.py  pricing.py  retries.py  scoring.py
backend/app/db/: engine.py  models.py  repositories.py
backend/app/schemas/: __init__.py  itinerary.py  request.py  response.py  scoring.py  verification.py
backend/app/sources/: __init__.py  _projection.py  aggregator_one.py  aggregator_two.py  base.py
backend/app/tests/: conftest.py  test_api_search_dry_run.py  test_booking_links.py  test_dedupe.py  test_schema_guard.py  test_schemas.py  test_scoring.py  test_sources_fixture_mode.py  test_stopover.py  test_verifier_fixture_mode.py
backend/app/tests/fixtures/expected/: final_result_shape.json
backend/app/tests/fixtures/requests/: search_request_dry_run.json
backend/app/tests/fixtures/sources/: aggregator_one_candidates.json  aggregator_two_candidates.json
backend/app/tests/fixtures/verifier/: verification_results.json
backend/flight_scout_agents_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+25 files in other folders)
